--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
-<html lang style="font-size: 20px;font-family: Roboto, Arial, sans-serif;" lang="en">
+<html style="font-size: 20px;font-family: Roboto, Arial, sans-serif;" lang = "en">
 <head>
+    <link
+        rel ="stylesheet"
+        href="./styles.css"
+    />
     <meta charset="UTF-8">
     <title>My Resume</title>
 </head>
@@ -10,35 +14,35 @@
     <p>I love technology. It is my passion and I want to learn everything about it</p>
     <hr>
     <h2>Education</h2>
-    <ul>
-        <li>University of Kurdistan Hawler (2023-Present)</li>
-        <li>Balla Secondary English School (2018-2022)</li>
-        <li>Twana International School (2014-2016)</li>
-        <li>Cambidge International School (2013-2014)</li>
-        <li>Sabis International School (2011-2013)</li>
-    </ul>
+        <ul class="red-text">
+            <li>University of Kurdistan Hawler (2023-Present)</li>
+            <li>Balla Secondary English School (2018-2022)</li>
+            <li>Twana International School (2014-2016)</li>
+            <li>Cambridge International School (2013-2014)</li>
+            <li>Sabis International School (2011-2013)</li>
+        </ul>
     <hr>
     <h2>Work Experience</h2>
-    <ul>
-        <li>Pepsi Co.</li>
-        <p>Learned many thing like laravel, php, HTML, CSS</p>
-    </ul>
+        <ul>
+            <li>Pepsi Co.</li>
+            <p>Learned many thing like laravel, php, HTML, CSS</p>
+        </ul>
     <hr>
     <h2>Skills</h2>
-    <ul>
-        <li>Project Management</li>
-        <li>C#</li>
-        <li>Java</li>
-        <li>HTML, CSS, PHP</li>
-        <li>PostgreSQL, MS SQL server</li>
-    </ul>
+        <ul>
+            <li>Project Management</li>
+            <li>C#</li>
+            <li>Java</li>
+            <li>HTML, CSS, PHP</li>
+            <li>PostgreSQL, MS SQL server</li>
+        </ul>
     <h2>Awards/ Certificates</h2>
-    <ul>
-        <li>Pepsi Co. certificate of internship</li>
-        <li>ILETS score of 7</li>
-    </ul>
+        <ul>
+            <li>Pepsi Co. certificate of internship</li>
+            <li>ILETS score of 7</li>
+        </ul>
 </body>
 <footer>
-    <a href = "about.html"></a>
+    <a href = "about.html">About Me</a>
 </footer>
 </html>
