--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <h2>Work Experience</h2>
         <ul>
             <li>Pepsi Co.</li>
-            <p>Learned many thing like laravel, php, HTML, CSS</p>
+            <p>Learned many things like laravel, php, HTML, CSS</p>
         </ul>
     <hr>
     <h2>Skills</h2>
